# ros_object_detector_wj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
example/: client.cpp  main.cpp  server.cpp
launch/: ros_ensemble_service_client.launch  ros_ensemble_service_client_.launch  ros_ensemble_service_server.launch
launch/backup/: ros_ensemble_service_client_can_0304.launch  ros_ensemble_service_server_can_0304.launch  ros_ensemble_service_server_cutter_0304.launch
msg/: yolo.msg
src/: RdvObjectDetector.cpp  RdvObjectDetector.h
srv/: SrvEnsemble.srv  robotis_gripper.srv
